--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --plugin-search-dir=. --write .",
     "cz": "cz",
     "prepare": "husky install",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "new:blog": "node -r esbuild-register ./new-blog.ts"
   },
   "dependencies": {
     "@astrojs/check": "^0.2.0",
@@ -40,9 +41,12 @@
     "astro-eslint-parser": "^0.15.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "esbuild-register": "^3.5.0",
     "eslint": "^8.50.0",
     "eslint-plugin-astro": "^0.29.0",
+    "fs-extra": "^11.1.1",
     "husky": "^8.0.3",
+    "inquirer": "^9.2.11",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
